--- a/site/CSS/style placement/style.css
+++ b/site/CSS/style placement/style.css
@@ -18,6 +18,8 @@ h1 {
     color: rgb(255, 50, 50);
     text-align: center;
     font-size: 50px;
+    padding-top: 5px;
+    box-shadow: 0px 4px 8px 0px #606060;
 }
 
 h1:hover {
@@ -28,4 +30,5 @@ p {
     font-family: 'Valorant';
     color: rgb(250, 100, 100);
     text-align: center;
+    letter-spacing: 1px;
 }
