--- a/site/style.css
+++ b/site/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-image: url("wp6489846-valorant-omen-wallpapers.png");
+    /* background-image: url("wp6489846-valorant-omen-wallpapers.png"); */
     background-blend-mode: normal;
     background-color: rgb(18, 18, 18, 1);
     background-repeat: no-repeat;
