--- a/site/CSS/style placement/style.css
+++ b/site/CSS/style placement/style.css
@@ -1,5 +1,7 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 @font-face {
@@ -11,6 +13,7 @@ body {
     font-family: 'Valorant';
     font-size: 30px;
     background-color: rgb(18, 18, 18);
+    size: 100%;
 }
 
 h1 {
@@ -19,7 +22,7 @@ h1 {
     text-align: center;
     font-size: 50px;
     padding-top: 5px;
-    box-shadow: 0px 4px 8px 0px #606060;
+    margin: 10px;
 }
 
 h1:hover {
@@ -27,8 +30,17 @@ h1:hover {
 }
 
 p {
+    align-items: center;
+    align-self: center;
     font-family: 'Valorant';
-    color: rgb(250, 100, 100);
+    color: rgb(250, 20, 100);
     text-align: center;
     letter-spacing: 1px;
+    background-color: #202020;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+    width: 510px;
+    box-shadow: 0 0 5px 0px #999999;
+    float: left;
 }
