--- a/site/bootstrap/css/styles.css
+++ b/site/bootstrap/css/styles.css
@@ -26,6 +26,10 @@ div > span {
     color: #181818;
 }
 
+a nav{
+    text-align: center;
+}
+
 .navbar-name {
     padding-top: 25px;
     text-decoration: none;
@@ -61,6 +65,11 @@ div > span {
 .navbar {
     background-color: #f6b319;
     border-radius: 0;
+}
+
+.navbar-toggler, .navbar-toggler-icon {
+    border: 1px #61122f;
+    color: #a1a1a0;
 }
 
 #logo-img {
