--- a/site/module-3-assignment/css/styles.css
+++ b/site/module-3-assignment/css/styles.css
@@ -94,6 +94,12 @@ li {
     }
 }
 
+@media (max-width : 574px) {
+    .col-xs-12 {
+        width: 100%;
+    }
+}
+
 ::-webkit-scrollbar {
     width: 3px;
   }
