navbar-brand margins

--- a/site/module-3-assignment/css/styles.css
+++ b/site/module-3-assignment/css/styles.css
@@ -21,6 +21,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-size: 24px;
     font-weight: 900;
+    margin-left: 15px;
 }
 
 .nav-link {
@@ -30,6 +31,7 @@ body {
 .row {
     width: 100%;
     margin: 0;
+    padding: 0;
 }
 
 .dish {
@@ -39,6 +41,7 @@ body {
     padding: 20px;
     color: aliceblue;
 }
+
 
 .tag {
     position: absolute;
